libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/fn-3.jsonc
//@ run: fail
//@ description: fn/3 should error out
["::kernel::special_form::fn", { "#tuple": [] }, { "#struct": {} }, "_"]
//~^ ERROR Add missing arguments
